inputフォームを追加

--- a/index.html
+++ b/index.html
@@ -3,14 +3,41 @@
 <head>
     <title>Confirm Before Leaving</title>
     <script type="text/javascript">
-        window.addEventListener('beforeunload', function (e) {
-            var confirmationMessage = 'このページを離れますか？';
-            (e || window.event).returnValue = confirmationMessage;
-            return confirmationMessage;
+        // ユーザーのインタラクションがあったかどうかを追跡するフラグ
+        let hasUserInteracted = false;
+
+        document.addEventListener('DOMContentLoaded', function() {
+            // フォームの入力フィールドにイベントリスナーを追加
+            var formInputs = document.querySelectorAll('input, textarea');
+            for (var i = 0; i < formInputs.length; i++) {
+                formInputs[i].addEventListener('input', function() {
+                    // ユーザーが入力を始めたらフラグをtrueに設定
+                    hasUserInteracted = true;
+                });
+            }
         });
+
+        function addBeforeUnloadListener() {
+            if (hasUserInteracted) {
+                // ユーザーのインタラクションがあった場合のみ、beforeunloadイベントリスナーを追加
+                window.addEventListener('beforeunload', function(e) {
+                    var confirmationMessage = 'このページを離れますか？';
+                    (e || window.event).returnValue = confirmationMessage;
+                    return confirmationMessage;
+                });
+            }
+        }
+
+        // ページ全体のクリックイベントでbeforeunloadイベントリスナーを追加する
+        window.addEventListener('click', addBeforeUnloadListener);
     </script>
 </head>
 <body>
-    <p>ページから離れようとすると、確認ダイアログが表示されます。</p>
+    <p>フォームに何か入力してください。その後、ページから離れようとすると確認ダイアログが表示されます。</p>
+    <form>
+        <input type="text" placeholder="ここに入力">
+        <textarea placeholder="またはここに入力"></textarea>
+    </form>
 </body>
 </html>
+
